quil-rs/src/program/scheduling/snapshots/quil_rs__program__scheduling__graph__graphviz_dot_tests__classical_read_write_load_mul.snap
---
source: quil-rs/src/program/scheduling/graph.rs
expression: dot_format
---
digraph {
  entry -> "block_0_start";
  entry [label="Entry Point"];
  subgraph cluster_0 {
    label="block_0";
    node [style="filled"];
    "block_0_start" [shape=circle, label="start"];
    "block_0_start" -> "block_0_0" [label="ordering"];
    "block_0_0" [shape=rectangle, label="[0] LOAD params1[0] params2 integers[0]"];
    "block_0_0" -> "block_0_1" [label="await read"];
    "block_0_1" [shape=rectangle, label="[1] MUL params2[0] 2"];
    "block_0_1" -> "block_0_end" [label="ordering"];
    "block_0_end" [shape=circle, label="end"];
  }
}
